# 2DProject

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Draw.cpp  Draw.h  FileHelper.h  Generator.h  Init.cpp  Init.h  Input.cpp  Input.h  README.md  TextFont.cpp  TextFont.h  UiFont.h  UiObjectFont.cpp  UiObjectFont.h  Vector2.cpp  Vector2.h  defs.h  draw.cpp  draw.h  init.cpp  init.h  input.cpp  input.h  main.cpp  structs.h
Audio/: AudioManager.cpp  AudioManager.h  Device.h  RenderResult.h  RenderSettings.h  Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  SoundPack.cpp  SoundPack.h  TimeSound.h  WavFileHeader.h
Game/: AnimationCycle.cpp  AnimationCycle.h  Background.cpp  Background.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  CycleManager.cpp  CycleManager.h  GObject.cpp  GObject.h  GameObject.cpp  GameObject.h  LightSource.cpp  LightSource.h  LightSourceComponent.cpp  LightSourceComponent.h  Scene.cpp  Scene.h  Sheet.cpp  Sheet.h  SheetAnimator.cpp  SheetAnimator.h  Texture.cpp  Texture.h  TileLayer.cpp  TileLayer.h  TileMap.cpp  TileMap.h  TileTexture.h  Transform.cpp  Transform.h  UiObject.cpp  UiObject.h
Game/Physics/: Castable.h  Ray.h  RayInfo.h  Raycaster.cpp  Raycaster.h
IP_Games/Knight/: Knight_Game.cpp  Knight_Game.h  Player.cpp  Player.h  PlayerStats.h
Settings/: Parser.cpp  Parser.h
